2003-04-14  Mike Lei <mike.lei@sun.com>
	
	* configure.in: Added Makefile support for de es fr it sv ko zh_CN zh_TW
	* added online help for above languages and ja

2003-04-11  Jaka Mocnik  <jaka@gnu.org>

	* src/gtkhex.c: Deactivate selection for keys other then
	Arrows and PgUp/PgDown.	Fixes bug 109397. patch by Rajkumar
	Sivasamy.
	* src/gtkhex.c: draw highlight in secondary view with the color
	for insensitive state. fixes bug 108756.
	* src/chartable.c: fixed keybindings. fixes 107188.
	* src/ghex-window.c (ghex_window_load): set max undo depth only
	if a document was created. patch by Pasupathi Duraisamy.
	* src/main.c (main): only attempt to open a file that exists. patch
	by Pasupathi Duraisamy.

2003-03-03  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* configure.in: Added Belarusian to ALL_LINGUAS.

2003-02-28  Jaka Mocnik  <jaka@gnu.org>

	* src/chartable.c: fix ESC key press handler bug that hid the treeview
	instead of the window!
	* src/converter.c: hide converter on ESC.

2003-02-25  Shivram U  <shivaram.upadhyayula@wipro.com>

	* src/ghex-window.c (ghex_window_close): If the last view has been 
	destroyed, unref the document.

2003-02-21  Jaka Mocnik  <jaka@gnu.org>

        * The Grand Librarification: to help viv at veeev dot com,
        the GtkHex widget, the HexDocument object and all relevant
        accessibility stuff have been moved into a separate library,
        libgtkhex, that comes bundled together with all the necessary
        includes and a pkgconfig description file.
        * in order to achieve this all config-dependent stuff has been
        moved out of the lib and into the main app. this might have
        resulted in introduction of a score of new bugs as the app itself
        was not  tested at all ;)

2003-02-17  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Removed "ar" from ALL_LINGUAS.

2003-02-15  Jaka Mocnik  <jaka@gnu.org>

	* src/chartable.c (hide_chartable_cb): sync chartable item.